# ai

./: .gitignore  README.md  lc_requirements.txt  requirements.txt
agents/cricket-agent/: cricket_agent.py  pyproject.toml
agents/cricket_agent/: README.md  cricket_tools.py  main.py
agents/poker-agent/: README.md  pyproject.toml
agents/poker-agent/agents/manager/: agent.py
agents/poker-agent/state/: app_state.py
agents/poker-agent/tools/: node.py
agents/rm_agent/: README.md  main.py  pyproject.toml  standalone.py
agents/rm_agent/agents/: base.py  rm_agent.py  summarization_agent.py  supervisor.py
agents/rm_agent/datastore/: database.py  database_test_async.py  redis_store.py  redis_test.py
agents/rm_agent/utils/: agents.py  background_task.py  base.py  chroma_search.py  database.py  database_test.py  env_settings.py  mcp_client.py  mcp_test.py  mcp_tools.py  models.py  redis_store.py  redis_test.py  resource_registry.py  rm_agent.py  schemas.py  summarization_agent.py  tools.py
lc_basic/: .env_template  cricket_agent.py  cricket_agent_tools.py  cricket_agent_variation.py  cricket_agent_with_tools.py  cricket_agent_with_tools_variation.py  cricket_tool_response_format.py
lg_app/: README.md
lg_app/a2a/poker-event-search-and-planner/manager/: README.md  langgraph.json  pyproject.toml
lg_app/a2a/poker-event-search-and-planner/manager/poker_agent/: agent.py  main.py
lg_app/a2a/poker-event-search-and-planner/manager/poker_agent/agents/manager/: models.py  nodes.py  remote_agent_client.py  remote_tool.py  utils.py
lg_app/a2a/poker-event-search-and-planner/manager/poker_agent/utils/: app_state.py  models.py  redis_db.py
lg_app/a2a/poker-event-search-and-planner/planner/: README.md  langgraph.json  pyproject.toml
lg_app/a2a/poker-event-search-and-planner/planner/planner_agent/: main.py  standalone.py
lg_app/a2a/poker-event-search-and-planner/planner/planner_agent/agent/: nodes.py  tools.py
lg_app/a2a/poker-event-search-and-planner/planner/planner_agent/util/: agent_card.py  app_state.py  google_resources.py  models.py  redis_db.py  resource_registry.py
lg_app/cricket-agent-app/: README.md  langgraph.json  pyproject.toml  requirements.txt
lg_app/cricket-agent-app/cricket_agent/: agent.py  agent_with_mcp.py
lg_app/cricket-agent-app/cricket_agent/utils/: mcp_tools.py  nodes.py  state.py
lg_app/poker-schedule-mgt-app/poker_agent/: agent.py
lg_app/poker-schedule-mgt-app/poker_agent/utils/: app_state.py
lg_app/rh-trading-app/: README.md  langgraph.json  pyproject.toml
lg_app/rh-trading-app/rh_agent/: main.py
lg_app/rm_agent_app/: README.md  docker-compose.yaml  langgraph.json  main.py  pyproject.toml  test.py
lg_app/rm_agent_app/ingestion/: README.md  ingest_documents.py  pyproject.toml
lg_app/rm_agent_app/rm_agent/: rm_agent.py  rm_agent_with_mcp.py
lg_app/rm_agent_app/rm_agent/utils/: nodes.py  state.py  tools.py
lg_app_util/rm_agent_util/ingestion/: ingest_documents.py  pyproject.toml
lg_basic/: cricket_agent.py  cricket_agent_sync.py  cricket_tools.py
mcp/: README.md
mcp/general-purpose/: CLAUDE.md  Dockerfile  README.md  asgi.py  fastmcp.json  main.py  pyproject.toml  resource_registry.py
mcp/general-purpose/mcp/: tools.py
mcp/general-purpose/mcp/poker_agent/: models.py  poker_tournament_mock.py  tools.py
mcp/rm-mcp-server/: Dockerfile  README.md  fastmcp.json  hooks.py  main.py  mcp-config.json  pyproject.toml  server.py
mcp/rm-mcp-server/mcp/collection/tools/: collection_tool.py
mcp/rm-mcp-server/mcp/recipe/resources/: rm_resources.py
mcp/rm-mcp-server/mcp/recipe/tools/: recipe_tool.py
skills/spring-boot-project-standards/: SKILL.md
tools/openclaw/: crons.sh  mcp-servers.sh
tools/searXNG/: install.sh
tools/searXNG/searxng/core-config/: settings.yml
web/calendar-ai-client/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
web/calendar-ai-client/src/: proxy.ts
web/calendar-ai-client/src/app/: layout.tsx  page.tsx
web/calendar-ai-client/src/app/api/auth/custom/[[...slug]]/: route.ts
web/calendar-ai-client/src/app/api/auth/refresh/: route.ts
web/calendar-ai-client/src/app/api/chat/[[...slug]]/: route.ts
web/calendar-ai-client/src/app/api/login/: route.ts
web/calendar-ai-client/src/app/dashboard/: Sidebar.tsx  layout.tsx  page.tsx
web/calendar-ai-client/src/app/dashboard/calendarai/: page.tsx
web/calendar-ai-client/src/app/dashboard/pokerai/: page.tsx
web/calendar-ai-client/src/app/dashboard/recipeai/: page.tsx
web/calendar-ai-client/src/app/services/: auth.ts  chat.ts
web/calendar-ai-client/src/components/: ChatBot.tsx  LoginForm.tsx
web/calendar-ai-client/src/lib/: constants.ts  cookie.ts  googleAuth.ts  logger.tsx  models.ts
(+1 files in other folders)
