[project]
name = "cricket-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary,pool]>=3.3.3",
    "python-dotenv>=1.2.2",
]
