[project]
name = "rm-agent"
version = "0.1.0"
description = "Recipe Manager AI Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.10",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
]

[tool.uv.workspace]
members = [
    "ingestion",
]
