[project]
name = "poker-schedule-mgt-app"
version = "0.1.0"
description = "Poker Event Search and Planner Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "grandalf>=0.8",
    "langchain>=1.3.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.1",
    "langgraph-api>=0.4.21",
]
