[project]
name = "poker-schedule-mgt-app"
version = "0.1.0"
description = "Personal schedule management application for poker events"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "google-auth>=2.53.0",
    "grandalf>=0.8",
    "langchain>=1.3.2",
    "langchain-google-community[calendar]>=4.0.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.1",
    "langgraph-api>=0.4.21",
    "redis>=8.0.0",
]
